Added comment to install CUAD model

--- a/Common_Utility_CUAD.ipynb
+++ b/Common_Utility_CUAD.ipynb
@@ -1148,6 +1148,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "To access the cuad-models folder, uncomment and run the above cell.\n",
+    "In case the curl command fails, then manually download the file from the URL and run rest of the commands."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
